[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.25",
    "langchain-openai>=1.1.12",
    "numpy>=2.4.4",
    "psycopg2>=2.9.11",
    "sentence-transformers>=5.3.0",
]
