[project]
name = "s2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain[openai]>=1.2.14",
    "langchainhub>=0.1.21",
    "langchain-postgres>=0.0.16",
    "pgvector>=0.2.5,<0.4",
    "psycopg>=3.2.0",
]